# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  12 Feb 2012; Robin H. Johnson <robbat2@gentoo.org>
  +patches/dmraid/dmraid-1.0.0_rc16-as-needed2.patch,
  +patches/dmraid/dmraid-1.0.0_rc16-return-all-sets.patch,
  +patches/dmraid/dmraid-1.0.0_rc16-static-build-fixes.patch,
  +patches/dmraid/dmraid-1.0.0_rc16-undo-p-rename.patch,
  +patches/dmraid/dmraid-1.0.0.rc16-3-staticlink.patch, genkernel.conf:
  Bug #398467: Update dmraid. Also add other patches from Portage tree.

  12 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> gen_cmdline.sh,
  gen_compile.sh, gen_determineargs.sh, gen_funcs.sh, genkernel.conf:
  device-mapper "update". It was merged into LVM2-2.02.67 upstream in 2010.
  Bug #398467 is wrong for the device-mapper update.

  09 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/initrd.scripts,
  defaults/linuxrc:
  Dogfooding of the /usr mount code with the matching OpenRC change to make the
  mounts RW revealed some bugs and gotchas in our prior code, now fixed and
  verified to work.

  06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> arch/alpha/config.sh,
  arch/arm/config.sh, arch/ia64/config.sh, arch/mips/config.sh,
  arch/parisc/config.sh, arch/parisc64/config.sh, arch/ppc/config.sh,
  arch/ppc64/config.sh, arch/sparc/config.sh, arch/sparc64/config.sh,
  arch/um/config.sh, arch/x86/config.sh, arch/x86_64/config.sh:
  Ensure default for new initramfs compression is used.

  06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
  Bugfixes in new code branches that I didn't test fully.

  06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> doc/genkernel.8.txt,
  gen_cmdline.sh:
  Update documentation for new initramfs compression.

  06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/config.sh,
  gen_cmdline.sh, gen_determineargs.sh, gen_initramfs.sh, genkernel.conf: